[workspace]
members = [
    "packages/js-runtime",
    "packages/dom-extension", "packages/js-runtime-macro",
]
resolver = "3"

[workspace.dependencies]
slab        = "0.4"
markup5ever = "0.11"
html5ever   = "0.26"
rquickjs    = { version = "0.9", features = ["full"] }
webatom-js-runtime = { path = "packages/js-runtime" }
