[workspace]
members = [
    "packages/js-runtime",
    "packages/dom-extension", 
    "packages/js-runtime-macro",
]
resolver = "3"

[workspace.dependencies]
slab        = "0.4"
markup5ever = "0.11"
html5ever   = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
rquickjs    = { version = "0.9", features = ["full"] }
webatom-js-runtime = { path = "packages/js-runtime" }
webatom-js-runtime-macro = { path = "packages/js-runtime-macro" }
