[workspace]
members = [
    "packages/js-runtime",
    "packages/js-runtime-macro",
    "packages/extension-dom",
]
resolver = "3"

[workspace.dependencies]
slab        = "0.4"
markup5ever = "0.11"
html5ever   = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
rquickjs    = { version = "0.12", features = ["futures", "loader"] }
tokio       = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
webatom-js-runtime = { path = "packages/js-runtime" }
webatom-js-runtime-macro = { path = "packages/js-runtime-macro" }
